Renaming services. Add gateway docker-compose file
